2018-08-22 Alessio Garzi <gun101@email.it>

	1.4 - new release with the following features :

	- dropped gtk2 dependency, replaced with gtk3

	- dropped libindicator dependenct, replaced with libayatana-appindicator3

	- dropped remote plugin download and python code related to it

	- better debian packaging

	- manpaged moved to upstream

2018-06-02 Alessio Garzi <gun101@email.it>

	1.3.3 - new release with the following features :

	- Guake indicator now supports Guake3 as default shell

	- Gconf2 replaced by gsettings (closes debian bug #892706)

	- Optional configuration file as argument

2014-12-31 Alessio Garzi <gun101@email.it>

	1.1 release with "open in selected tab" option added

2014-12-24 Alessio Garzi <gun101@email.it> and Francesco Minà <mina.francesco@gmail.com>

	1.0 release with the following features :
	
	- switch to xml based configuration file
	
	- new gui for configuration file builder
	
	- suppressed ssh strongly related commands
	
	- command passed to guake now is fully customizable
	
	- added plugins managment

2014-07-15 Alessio Garzi <gun101@email.it>

	* src/Changelog : Start of glade based gui development


2014-06-15 Alessio Garzi  <gun101@email.it>

	* src/COPYING : Changed with correct license

2014-06-15 Alessio Garzi  <gun101@email.it>

	* src/guake-indicator-notify.h : Changed notification icon
	
	* src/guake-indicator.c : Check if fopen() fails while opening /proc/#pid#/comm
	
	* src/guake-indicator-read-json.c : Fixed memory leaks within read_json_cfg_file() function
	
	* src/guake-indicator-write-json.c : Added write json configuration file capabilities
	
	* src/guake-indicator-write-json.h : Added write json configuration file capabilities
	
	* src/Makefile.am : Added guake-indicator-write-json.c and guake-indicator-write-json.h to guake_indicator_CPPFLAGS
	
	* src/guake-indicator-read-json.c : Added dont_show_guake option
	
	* src/guake-indicator.h : Added dont_show_guake option
	