@@ -302,6 +302,7 @@ int main (int argc, char **argv)
         GArray* grouphostlist;
         GtkInfo gtkinfo;
         GUAKE3=1;			// Guake 3 is the default
+        gint32 numtabs;
 
         gtk_init (&argc, &argv);
 
@@ -337,60 +338,17 @@ int main (int argc, char **argv)
         if (grouphostlist==NULL)
                 error_modal_box("Couldn't retrieve list of entries from your guake indicator configuration file");
 
+        // Test dbus responsiveness to know if it's running, if it's not i try to start it
+        if (guake_gettabcount(&numtabs)==FALSE)
+        {
+        	if (GUAKE3) system ("/usr/bin/python3 /usr/bin/guake &");
+        	else system ("guake &");
+        }
+
         guake_notify("Guake indicator","Guake indicator is running");
 
         gtkinfo.grouphostlist=grouphostlist;
 
         build_menu_ayatana(argc,argv,&gtkinfo);
         return 0;
-}
-
-int findguakepid()
-{
-	const char* directory = "/proc";
-	size_t taskNameSize = 1024;
-	char* taskName = calloc(1, taskNameSize);
-	const char* guakestr ="guake";
-
-	DIR* dir = opendir(directory);
-
-	if (dir)
-	{
-		struct dirent* de = 0;
-		while ((de = readdir(dir)) != 0)
-		{
-			if (strcmp(de->d_name, ".") == 0 || strcmp(de->d_name, "..") == 0)
-				continue;
-
-			int pid = -1;
-			int res = sscanf(de->d_name, "%d", &pid);
-
-			if (res == 1)
-			{
-
-				char cmdline_file[1024] = {0};
-				sprintf(cmdline_file, "%s/%d/comm", directory, pid);
-
-				FILE* cmdline = fopen(cmdline_file, "r");
-				if (cmdline==NULL) continue;
-
-				if (getline(&taskName, &taskNameSize, cmdline) > 0)
-				{
-					taskName[strlen((char*)taskName)-1]=0;
-					if (!strcmp(taskName, guakestr) != 0)
-					{
-						fclose(cmdline);
-						closedir(dir);
-						free(taskName);
-						return pid;
-					}
-				}
-
-				fclose(cmdline);
-			}
-		}
-		closedir(dir);
-	}
-	free(taskName);
-	return 0;
 }
